--- a/vignettes/bbotk.Rmd
+++ b/vignettes/bbotk.Rmd
@@ -141,8 +141,89 @@ instance$archive$data()
 
 ### Search Space Transformations
 
-TODO
+If the domain of the `Objective` is complex, it is often necessary to define a simpler *search space* that can be handled by the `Optimizer` and to define a transformation that transforms the value suggested by the optimizer to a value of the *domain* of the `Objective`.
 
+Reasons for transformations can be:
+
+1. The objective is more sensitive to changes of small values then to changes of bigger values of a certain parameter. 
+   E.g. we could suspect that for a parameter `x3` the change from `0.1` to `0.2` has a similar effect as the change of `100` to `200`.
+2. Certain restrictions are known, i.e. the sum of three parameters is supposed to be 1.
+3. many more...
+
+In the following we will look at an example for 2.)
+
+We want to construct a box with the maximal volume, with the restriction that `h+w+d = 1`.
+For simplicity we define our problem as a minimization problem.
+```{r}
+fun_volume = function(xs) {
+  - (xs$h * xs$w * xs$d)
+}
+domain = ParamSet$new(list(
+  ParamDbl$new("h", lower = 0),
+  ParamDbl$new("w", lower = 0),
+  ParamDbl$new("d", lower = 0)
+))
+obj = ObjectiveRFun$new(
+  fun = fun_volume,
+  domain = domain
+)
+```
+We notice, that our optimization problem has three parameters but due to the restriction it only the degree of freedom 2.
+Therefore we only need to optimize two parameters and calculate `h`, `w`, `d` accordingly.
+```{r}
+search_space = ParamSet$new(list(
+  ParamDbl$new("h", lower = 0, upper = 1),
+  ParamDbl$new("w", lower = 0, upper = 1)
+))
+search_space$trafo = function(x, param_set){
+  x = unlist(x)
+  x["d"] = 2 - sum(x) # model d in dependence of h, w
+  x = x/sum(x) # ensure that h+w+d = 1
+  as.list(x)
+}
+```
+Instead of the domain of the `Objective` we now use our constructed `search_space` that includes the `trafo` for the `OptimInstance`.
+```{r}
+inst = OptimInstanceSingleCrit$new(
+  objective = obj, 
+  search_space = search_space, 
+  terminator = term("evals", n_evals = 30)
+)
+optimizer = opt("gensa")
+lg = lgr::get_logger("bbotk")$set_threshold("warn") # turn off console output
+optimizer$optimize(inst)
+lg = lgr::get_logger("bbotk")$set_threshold("info") # turn on console output
+```
+The optimizer only saw the search space during optimization and returns the following result:
+```{r}
+inst$result_x_search_space
+```
+Internally, the `OptimInstance` transformed these values to the *domain* so that the result for the `Objective` looks as follows:
+```{r}
+inst$result_x_domain
+obj$eval(inst$result_x_domain)
+```
+
+### Notes on the optimization archive
+
+The following is just meant for *advanced* readers.
+If you want to evaluate the function outside of the optimization but have the result stored in the `Archive` you can do so by resetting the termination and call `$eval_batch()`.
+```{r}
+inst$is_terminated = FALSE
+inst$terminator = term("none")
+xvals = data.table(h = c(0.6666, 0.6667), w = c(0.6666, 0.6667))
+inst$eval_batch(xdt = xvals)
+tail(inst$archive$data())
+```
+However, this does not update the result. 
+You could set the result by calling `inst$assign_result()` but this should be handled by the optimizer.
+Another way to get the best point is the following:
+```{r}
+inst$archive$best()
+```
+Note, that this method just looks for the best outcome and returns the according row from the archive.
+For stochastic optimization problems this is overly optimistic and leads to biased results.
+For this reason the optimizer can use advanced methods to determine the result and set it itself.
 
 ## Implementing your own Objective
 
