--- a/inst/references.bib
+++ b/inst/references.bib
@@ -9,7 +9,6 @@
 	pages        = 13,
 	doi          = {10.32614/rj-2013-002}
 }
-
 @article{tsallis_1996,
 	title        = {Generalized simulated annealing},
 	author       = {Constantino Tsallis and Daniel A. Stariolo},
@@ -21,4 +20,14 @@
 	number       = {1-2},
 	pages        = {395--406},
 	doi          = {10.1016/s0378-4371(96)00271-3}
+}
+@article{bergstra_2012,
+	title        = {Random Search for Hyper-Parameter Optimization},
+	author       = {James Bergstra and Yoshua Bengio},
+	year         = 2012,
+	journal      = {Journal of Machine Learning Research},
+	volume       = 13,
+	number       = 10,
+	pages        = {281--305},
+	url          = {http://jmlr.org/papers/v13/bergstra12a.html}
 }
