add reference for nlopt

--- a/inst/references.bib
+++ b/inst/references.bib
@@ -31,3 +31,9 @@
 	pages        = {281--305},
 	url          = {http://jmlr.org/papers/v13/bergstra12a.html}
 }
+@misc{johnson_2014,
+	title        = {The NLopt nonlinear-optimization package},
+	author       = {Johnson, Steven G},
+	url          = {http://github.com/stevengj/nlopt},
+	year         = 2020
+}
