--- a/inst/references.bib
+++ b/inst/references.bib
@@ -29,7 +29,7 @@
 	volume       = 13,
 	number       = 10,
 	pages        = {281--305},
-	url          = {http://jmlr.org/papers/v13/bergstra12a.html}
+	url          = {https://jmlr.csail.mit.edu/papers/v13/bergstra12a.html}
 }
 @misc{johnson_2014,
 	title        = {The NLopt nonlinear-optimization package},
