--- a/inst/references.bib
+++ b/inst/references.bib
@@ -34,6 +34,6 @@
 @misc{johnson_2014,
 	title        = {The NLopt nonlinear-optimization package},
 	author       = {Johnson, Steven G},
-	url          = {http://github.com/stevengj/nlopt},
+	url          = {https://github.com/stevengj/nlopt},
 	year         = 2020
 }
