docs: update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,11 @@ output: github_document
 ```{r, include = FALSE}
 lgr::get_logger("bbotk")$set_threshold("warn")
 set.seed(1)
-options(datatable.print.class = FALSE, datatable.print.keys = FALSE)
+options(
+    datatable.print.nrows = 10,
+    datatable.print.class = FALSE,
+    datatable.print.keys = FALSE,
+    width = 100)
 ```
 
 # bbotk - Black-Box Optimization Toolkit
@@ -13,11 +17,17 @@ options(datatable.print.class = FALSE, datatable.print.keys = FALSE)
 Package website: [release](https://bbotk.mlr-org.com/) | [dev](https://bbotk.mlr-org.com/dev/)
 
 <!-- badges: start -->
-[![tic](https://github.com/mlr-org/bbotk/workflows/tic/badge.svg?branch=main)](https://github.com/mlr-org/bbotk/actions)
+[![r-cmd-check](https://github.com/mlr-org/bbotk/actions/workflows/r-cmd-check.yml/badge.svg)](https://github.com/mlr-org/bbotk/actions/workflows/r-cmd-check.yml)
 [![CRAN Status Badge](https://www.r-pkg.org/badges/version-ago/bbotk)](https://cran.r-project.org/package=bbotk)
+[![Mattermost](https://img.shields.io/badge/chat-mattermost-orange.svg)](https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/)
 <!-- badges: end -->
 
-This package provides a common framework for optimization including
+*bbotk* is a black-box optimization framework for R.
+It features highly configurable search spaces via the [paradox](https://github.com/mlr-org/paradox) package and optimizes every user-defined objective function.
+The package includes several optimization algorithms e.g. Random Search, Iterated Racing, Bayesian Optimization (in [mlr3mbo](https://github.com/mlr-org/mlr3mbo)) and Hyperband (in [mlr3hyperband](https://github.com/mlr-org/mlr3hyperband)).
+bbotk is the base package of [mlr3tuning](https://github.com/mlr-org/mlr3tuning), [mlr3fselect](https://github.com/mlr-org/mlr3fselect) and [miesmuschel](https://github.com/mlr-org/miesmuschel).
+
+The package includes the basis building block of optimization:
 
 * `Optimizer`: Objects of this class allow you to optimize an object of the class `OptimInstance`.
 * `OptimInstance`: Defines the optimization problem, consisting of an `Objective`, the `search_space` and a `Terminator`.
@@ -25,8 +35,6 @@ This package provides a common framework for optimization including
 * `Objective`: Objects of this class contain the objective function.
    The class ensures that the objective function is called in the right way and defines, whether the function should be minimized or maximized.
 * `Terminator`: Objects of this class control the termination of the optimization independent of the optimizer.
-
-Various optimization methods are already implemented e.g. grid search, random search and generalized simulated annealing.
 
 ## Resources
 
