docs: remove vignette

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,33 @@ It features highly configurable search spaces via the [paradox](https://github.c
 The package includes several optimization algorithms e.g. Random Search, Iterated Racing, Bayesian Optimization (in [mlr3mbo](https://github.com/mlr-org/mlr3mbo)) and Hyperband (in [mlr3hyperband](https://github.com/mlr-org/mlr3hyperband)).
 bbotk is the base package of [mlr3tuning](https://github.com/mlr-org/mlr3tuning), [mlr3fselect](https://github.com/mlr-org/mlr3fselect) and [miesmuschel](https://github.com/mlr-org/miesmuschel).
 
+## Resources
+
+There are several sections about black-box optimization in the [mlr3book](https://mlr3book.mlr-org.com).
+Often the sections about tuning are also relevant for general black-box optimization.
+
+* Getting started with [black-box optimization](https://mlr3book.mlr-org.com/chapters/chapter5/advanced_tuning_methods_and_black_box_optimization.html#sec-black-box-optimization).
+* Learn about log transformations in the [search space](https://mlr3book.mlr-org.com/chapters/chapter4/hyperparameter_optimization.html#sec-logarithmic-transformations).
+* Or more advanced [search space transformations](https://mlr3book.mlr-org.com/chapters/chapter4/hyperparameter_optimization.html#sec-tune-trafo).
+* Learn about [multi-objective optimization](https://mlr3book.mlr-org.com/chapters/chapter5/advanced_tuning_methods_and_black_box_optimization.html#sec-multi-metrics-tuning).
+* The [mlr3viz](https://github.com/mlr-org/mlr3viz) package can be used to [visualize](https://mlr-org.com/gallery/technical/2022-12-22-mlr3viz/#tuning-instance) the optimization process.
+
+## Installation
+
+Install the latest release from CRAN.
+
+```{r eval = FALSE}
+install.packages("bbotk")
+```
+
+Install the development version from GitHub.
+
+```{r eval = FALSE}
+pak::pkg_install("mlr-org/bbotk")
+```
+
+## Examples
+
 The package includes the basic building blocks of optimization:
 
 * `Optimizer`: Objects of this class allow you to optimize an object of the class `OptimInstance`.
@@ -37,27 +64,35 @@ The package includes the basic building blocks of optimization:
    The class ensures that the objective function is called in the right way and defines, whether the function should be minimized or maximized.
 * `Terminator`: Objects of this class control the termination of the optimization independent of the optimizer.
 
-## Resources
+bbotk supports user-defined batch parallelization and asynchronous high performance parallelization with [Redis](https://redis.io/).
+The batch parallelization is defined wit the classes `OptimizerBatch`, `OptimInstanceBatchSingleCrit` and `OptimInstanceBatchMultiCrit`.
+The asynchronous parallelization is defined with the classes `OptimizerAsync`, `OptimInstanceAsyncSingleCrit` and `OptimInstanceAsyncMultiCrit`.
+The package includes several optimizers.
+Optimizers are constructed by calling the `opt(key)` function with the optimizer's key.
 
-* Package [vignette](https://CRAN.R-project.org/package=bbotk/vignettes/bbotk.html)
-
-## Installation
-
-Install the last release from CRAN:
-
-```{r eval = FALSE}
-install.packages("bbotk")
+```{r echo = FALSE}
+tab = as.data.table(opts())
+knitr::kable(tab[, list(label, key, properties, packages)], col.names = c("Optimizer", "Key", "Properties", "Packages"))
 ```
 
-Install the development version from GitHub:
-
-```{r eval = FALSE}
-remotes::install_github("mlr-org/bbotk")
-```
-
-## Examples
+More optimizers can be found in [mlr3mbo](https://github.com/mlr-org/bbotk), [mlr3hyperband](https://github.com/mlr-org/mlr3hyperband) and [miesmuschel](https://github.com/mlr-org/miesmuschel).
 
 ### Optimization
+
+In the following we will use `bbotk` to minimize this function:
+
+```{r}
+fun = function(xs) {
+  c(y = - (xs[[1]] - 2)^2 - (xs[[2]] + 3)^2 + 10)
+}
+```
+
+First we need to wrap `fun` inside an `Objective` object.
+For functions that expect a list as input we can use the `ObjectiveRFun` class.
+Additionally, we need to specify the domain, i.e. the space of x-values that the function accepts as an input.
+Optionally, we can define the co-domain, i.e. the output space of our objective function.
+This is only necessary if we want to deviate from the default which would define the output to be named *y* and be minimized.
+Such spaces are defined using the package [`paradox`](https://github.com/mlr-org/paradox).
 
 ```{r}
 # define the objective function
@@ -83,16 +118,40 @@ objective = ObjectiveRFun$new(
   codomain = codomain,
   properties = "deterministic"
 )
+```
 
-# Define termination criterion
-terminator = trm("evals", n_evals = 10)
+In the next step we decide when the optimization should stop.
+We can list all available terminators with the `trms()` function.
 
+```{r}
+trms()
+```
+
+The termination should stop, when 20 evaluations are reached.
+
+```{r}
+terminator = trm("evals", n_evals = 20)
+```
+
+Before we finally start the optimization, we have to create an `OptimInstance` that contains also the `Objective` and the `Terminator`.
+The `OptimInstance` is created with the `oi()` function.
+
+```{r}
 # create optimization instance
-instance = OptimInstanceBatchSingleCrit$new(
+instance = oi(
   objective = objective,
   terminator = terminator
 )
+instance
+```
 
+Note, that `OptimInstance` also has an optional `search_space` argument.
+It can be used if the `search_space` is only a subset of `obfun$domain` or if you want to apply transformations.
+
+Finally, we have to define an `Optimizer`.
+We opt for evolutionary optimizer, from the `GenSA` package.
+
+```{r}
 # load optimizer
 optimizer = opt("gensa")
 
@@ -106,23 +165,6 @@ instance$result
 as.data.table(instance$archive)
 ```
 
-### Quick optimization with `bb_optimize`
+The archive contains all evaluated configurations and their corresponding performance.
+We can use less code by using the [`bb_optimize`](https://bbotk.mlr-org.com/reference/bb_optimize.html) function.
 
-```{r}
-library(bbotk)
-
-# define the objective function
-fun = function(xs) {
-  c(y1 = - (xs[[1]] - 2)^2 - (xs[[2]] + 3)^2 + 10)
-}
-
-# optimize function with random search
-result = bb_optimize(fun, method = "random_search", lower = c(-10, -5), upper = c(10, 5),
-  max_evals = 100)
-
-# optimized parameters
-result$par
-
-# optimal outcome
-result$value
-```
