--- a/README.Rmd
+++ b/README.Rmd
@@ -25,39 +25,37 @@ Package website: [release](https://bbotk.mlr-org.com/) | [dev](https://bbotk.mlr
 
 *bbotk* is a black-box optimization framework for R.
 It features highly configurable search spaces via the [paradox](https://github.com/mlr-org/paradox) package and optimizes every user-defined objective function.
-The package includes several optimization algorithms e.g. Random Search, Iterated Racing, Bayesian Optimization (in [mlr3mbo](https://github.com/mlr-org/mlr3mbo)) and Hyperband (in [mlr3hyperband](https://github.com/mlr-org/mlr3hyperband)).
+The package includes several optimization algorithms e.g. Random Search, Grid Search, Iterated Racing, Bayesian Optimization (in [mlr3mbo](https://github.com/mlr-org/mlr3mbo)) and Hyperband (in [mlr3hyperband](https://github.com/mlr-org/mlr3hyperband)).
 bbotk is the base package of [mlr3tuning](https://github.com/mlr-org/mlr3tuning), [mlr3fselect](https://github.com/mlr-org/mlr3fselect) and [miesmuschel](https://github.com/mlr-org/miesmuschel).
-
-The package includes the basic building blocks of optimization:
-
-* `Optimizer`: Objects of this class allow you to optimize an object of the class `OptimInstance`.
-* `OptimInstance`: Defines the optimization problem, consisting of an `Objective`, the `search_space`, and a `Terminator`.
-   All evaluations on the `OptimInstance` will be automatically stored in its own `Archive`.
-* `Objective`: Objects of this class contain the objective function.
-   The class ensures that the objective function is called in the right way and defines, whether the function should be minimized or maximized.
-* `Terminator`: Objects of this class control the termination of the optimization independent of the optimizer.
 
 ## Resources
 
-* Package [vignette](https://CRAN.R-project.org/package=bbotk/vignettes/bbotk.html)
+There are several sections about black-box optimization in the [mlr3book](https://mlr3book.mlr-org.com).
+Often the sections about tuning are also relevant for general black-box optimization.
+
+* Getting started with [black-box optimization](https://mlr3book.mlr-org.com/chapters/chapter5/advanced_tuning_methods_and_black_box_optimization.html#sec-black-box-optimization).
+* An overview of all optimizers and tuners can be found on our [website](https://mlr-org.com/tuners.html).
+* Learn about log transformations in the [search space](https://mlr3book.mlr-org.com/chapters/chapter4/hyperparameter_optimization.html#sec-logarithmic-transformations).
+* Or more advanced [search space transformations](https://mlr3book.mlr-org.com/chapters/chapter4/hyperparameter_optimization.html#sec-tune-trafo).
+* Run [multi-objective optimization](https://mlr3book.mlr-org.com/chapters/chapter5/advanced_tuning_methods_and_black_box_optimization.html#sec-multi-metrics-tuning).
+* The [mlr3viz](https://github.com/mlr-org/mlr3viz) package can be used to [visualize](https://mlr-org.com/gallery/technical/2022-12-22-mlr3viz/#tuning-instance) the optimization process.
+* Quick optimization with the [`bb_optimize`](https://bbotk.mlr-org.com/reference/bb_optimize.html) function.
 
 ## Installation
 
-Install the last release from CRAN:
+Install the latest release from CRAN.
 
 ```{r eval = FALSE}
 install.packages("bbotk")
 ```
 
-Install the development version from GitHub:
+Install the development version from GitHub.
 
 ```{r eval = FALSE}
-remotes::install_github("mlr-org/bbotk")
+pak::pkg_install("mlr-org/bbotk")
 ```
 
-## Examples
-
-### Optimization
+## Example
 
 ```{r}
 # define the objective function
@@ -76,7 +74,7 @@ codomain = ps(
   y = p_dbl(tags = "maximize")
 )
 
-# create Objective object
+# create objective
 objective = ObjectiveRFun$new(
   fun = fun,
   domain = domain,
@@ -84,13 +82,10 @@ objective = ObjectiveRFun$new(
   properties = "deterministic"
 )
 
-# Define termination criterion
-terminator = trm("evals", n_evals = 10)
-
-# create optimization instance
-instance = OptimInstanceBatchSingleCrit$new(
+# initialize instance
+instance = oi(
   objective = objective,
-  terminator = terminator
+  terminator = trm("evals", n_evals = 20)
 )
 
 # load optimizer
@@ -106,23 +101,3 @@ instance$result
 as.data.table(instance$archive)
 ```
 
-### Quick optimization with `bb_optimize`
-
-```{r}
-library(bbotk)
-
-# define the objective function
-fun = function(xs) {
-  c(y1 = - (xs[[1]] - 2)^2 - (xs[[2]] + 3)^2 + 10)
-}
-
-# optimize function with random search
-result = bb_optimize(fun, method = "random_search", lower = c(-10, -5), upper = c(10, 5),
-  max_evals = 100)
-
-# optimized parameters
-result$par
-
-# optimal outcome
-result$value
-```
