--- a/README.Rmd
+++ b/README.Rmd
@@ -60,7 +60,7 @@ pak::pkg_install("mlr-org/bbotk")
 ```{r}
 # define the objective function
 fun = function(xs) {
-  - (xs[[1]] - 2)^2 - (xs[[2]] + 3)^2 + 10
+  list(y = - (xs[[1]] - 2)^2 - (xs[[2]] + 3)^2 + 10)
 }
 
 # set domain
